X-2登録ダイアログ；遷移調整

--- a/uitest/Tab/TabCon/TabCon/Views/X_2.xaml
+++ b/uitest/Tab/TabCon/TabCon/Views/X_2.xaml
@@ -160,18 +160,19 @@
 		<StackPanel Grid.Row="1" Grid.Column="3" 
 							Orientation="Horizontal"
 								 Margin="0,0,5,0">
-			<ComboBox Name="color_cb"  Height="24"  MinWidth="100"
+			<ComboBox Name="color_cb"  Height="24"  MinWidth="115"
 								ItemsSource="{Binding Path=ColorComboSource}" 
 								SelectedIndex="{Binding Path=ColorComboSelectedIndex,Mode=TwoWay}" 
 								SelectedValuePath="Key" 
 								DisplayMemberPath="Value"
-								>
+								HorizontalAlignment="Stretch"
+							>
 				<!--<i:EventTrigger EventName="SelectionChanged">
 					<i:InvokeCommandAction Command="{Binding ColorComboCommand}" />
 				</i:EventTrigger>   でクラッシュした-->
 			</ComboBox>
 			<ig:XamColorPicker 	x:Name="xamColorPicker" 
-					Grid.Row="1" Grid.Column="3"  Margin="0,10,0,10" MinWidth="40" 
+					Grid.Row="1" Grid.Column="3" MinWidth="40" 
 					SelectedColor="{Binding Path=SelectedColorCord,Mode=TwoWay}" 
 					>
 				<!--
@@ -245,12 +246,13 @@
 		</DatePicker>
 		<StackPanel  Grid.Row="3"  Grid.Column="2" Grid.ColumnSpan="2" Orientation="Horizontal" >
 			<ComboBox ItemsSource="{Binding TSList}"  
-								SelectedItem="{Binding eventTimeStart, Mode=TwoWay}" />
-			<!--<local:TimePic x:Name="start_time_tp"   VerticalAlignment="Center"  
-								TimeSelectionChanged="Start_time_tp_SelectedTimeChanged"   />-->
+								SelectedItem="{Binding EventTimeStart, Mode=TwoWay}"
+								 Height="26" Width="40"
+								/>
+			<Label Content="時"/>
 	
 			<CheckBox x:Name="daylong_cb" Content="終日" 
-								IsChecked="{Binding eventTimeEnd, Mode=TwoWay}"
+								IsChecked="{Binding EventIsDaylong, Mode=TwoWay}"
 								 HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0"
 								/>
 			<!--Click="Daylong_cb_Click"-->
@@ -261,7 +263,7 @@
 							Height="26" VerticalAlignment="Stretch"
 							SelectedDateFormat="Long"
 							Name="end_date_dp"
-								SelectedDate="{Binding Path=eventDateEnd,Mode=TwoWay}" 
+								SelectedDate="{Binding Path=EventDateEnd,Mode=TwoWay}" 
 								>
 			<DatePicker.Resources>
 				<Style TargetType="{x:Type Button}">
@@ -281,9 +283,11 @@
  SelectedDateChanged="End_date_dp_SelectedDateChanged"-->
 
 		<StackPanel  Grid.Row="4"  Grid.Column="2" Grid.ColumnSpan="2" Orientation="Horizontal" >
-
 			<ComboBox ItemsSource="{Binding Path=TSList}"  
-								SelectedItem="{Binding Path=eventTimeEnd,Mode=TwoWay}" />
+								SelectedItem="{Binding Path=EventTimeEnd,Mode=TwoWay}" 
+								 Height="26" Width="40"
+								/>
+			<Label Content="時"/>
 
 			<!--<local:TimePic  x:Name="end_time_tp"  VerticalAlignment="Top"  
 										TimeSelectionChanged="End_time_tp_SelectedTimeChanged"   />-->
